# HexGraphics

./: build_linux.sh  build_windows.ps1
source/: CMakeLists.txt  main.cpp
source/application/: Application.cpp
source/engine/: CMakeLists.txt  Core.hpp  Engine.cpp  Engine.hpp  EntryPoint.hpp  engine.cpp  engine.hpp
source/engine/include/: HexEngine.hpp
source/engine/libs/: CMakeLists.txt
source/engine/libs/glad/include/glad/: glad.h
source/engine/libs/spdlog/: CMakeLists.txt
source/engine/libs/stb/: CMakeLists.txt  stb_image.h
source/engine/logger/: CMakeLists.txt  logger.cpp  logger.hpp
source/libs/glad/: CMakeLists.txt
source/libs/glad/src/: glad.c
source/sandbox/: CMakeLists.txt
