cmake_minimum_required(VERSION 3.2)
set(ENV{CMAKE_GENERATOR} "MinGW Makefiles")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED On)
set(CMAKE_CXX_EXTENSIONS On)
set(PROJECT_DIR CMAKE_CURRENT_SOURCE_DIR)

project(HEXGRAPHICS)
set(SOURCE_FILES application/Application.cpp)
add_executable(HEXGRAPHICS ${SOURCE_FILES})

add_subdirectory(engine)
target_link_libraries(HEXGRAPHICS HexEngine)
include_directories("engine/include")
message("before")
message(${CMAKE_BINARY_DIR})
message("after")
install(FILES "${CMAKE_BINARY_DIR}/engine/HexEngine.dll" DESTINATION ${CMAKE_BINARY_DIR})
